# evolution078ots

./: .dockerignore  .gitignore  CMakeLists.txt  CRASHFIXES.md  DEPLOYMENT.md  Dockerfile  MODERNIZATION.md  README.md  config.lua  database.sqlite.sql  docker-compose.yml
.github/workflows/: release.yml
cmake/: BuildVendoredLua.cmake  FindGMP.cmake  FindMySQLClient.cmake
data/monster/: monsters.xml
data/npc/scripts/: addon.lua  promote.lua
data/spells/: spells.xml
docker/: entrypoint.sh  healthcheck.sh
pterodactyl/: egg-evolution-mysql.json  egg-evolution-sqlite.json  start.sh
remote control/: CMakeLists.txt
remote control/source/: commands.cpp  definitions.h  frontend.h  gui_wx.cpp  networkmessage.cpp  rsa.cpp
source/: ban.cpp  combat.cpp  commands.cpp  commands.h  condition.h  configmanager.cpp  configmanager.h  database.cpp  database.h  databasemysql.cpp  databasemysql.h  databasesqlite.h  db.s3db  definitions.h  depot.cpp  enums.h  exception.cpp  fileloader.h  game.cpp  game.h  guilds.cpp  house.cpp  housetile.cpp  ioaccount.h  ioaccountsql.h  ioaccountxml.h  ioplayer.h  ioplayersql.cpp  ioplayersql.h  ioplayerxml.cpp  ioplayerxml.h  item.cpp  items.h  logger.cpp  logger.h  luascript.h  mailbox.cpp  monsters.cpp  networkmessage.cpp  otserv.cpp  (+7 more)
